--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
   <canvas id="bg"></canvas>
   <main style="height: 6000px;"></main>
    
-  <script type="module" src="/main.js"></script>
+  <script type="module" src="/src/main.js"></script>
 </body>
 </html>
